--- a/bolide_obstacle_avoidance/package.xml
+++ b/bolide_obstacle_avoidance/package.xml
@@ -5,7 +5,7 @@
   <version>0.0.0</version>
   <description>Obstacle avoidance algorithm for autonomous car</description>
   <maintainer email="christelle@example.com">Christelle</maintainer>
-  <license>Apache License 2.0</license>
+  <license>Apache-2.0</license>
 
   <depend>rclpy</depend>
   <depend>sensor_msgs</depend>
@@ -15,9 +15,9 @@
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
+  <test_depend>python3-pytest</test_depend>
 
   <export>
     <build_type>ament_python</build_type>
   </export>
 </package></content>
-<parameter name="filePath">c:\Users\Christelle\Documents\Codes\M2\PFE\high_level_ros2\bolide_obstacle_avoidance\package.xml
